completed git download function

--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -20,7 +20,7 @@
     <div class="container text-center">
         <h1>Your Fortify Report</h1>
         <p>Here is your Fortify report generated from the GitHub link provided:</p>
-        <p>Your GitHub link: <span th:text="${githubLink}"></span></p>
+        <p>Your GitHub link: <span th:text="${repoUrl}"></span></p>
         <div id="report" class="text-left">
             <!-- The report will be populated here -->
         </div>
