--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -20,7 +20,8 @@
     <div class="container text-center">
         <h1>Your Fortify Report</h1>
         <p>Here is your Fortify report generated from the GitHub link provided:</p>
-        <p>Your GitHub link: <span th:text="${repoUrl}"></span></p>
+        <p>Repo URL: <a th:href="@{${repoURL} + '/tree/' + ${branch}}" th:text="${repoURL} + '/tree/' + ${branch}"></a></p>
+<!--        <p>Branch: <a th:href="${branch}" th:text="${branch}"></a></p>-->
         <div id="report" class="text-left">
             <!-- The report will be populated here -->
         </div>
