user can view pdf now

--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -60,7 +60,7 @@
         <h1 class="my-3">Your Fortify Report</h1>
         <a th:href="@{${repoURL} + '/tree/' + ${branch}}" th:text="${repoURL} + '/tree/' + ${branch}"></a>
         <div id="report" class="text-left">
-            <!-- The report will be populated here -->
+            <a href="alex_resume.pdf" target="_blank">View PDF</a>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
