--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -59,8 +59,11 @@
     <div class="container text-center">
         <h1 class="my-3">Your Fortify Report</h1>
         <a th:href="@{${repoURL} + '/tree/' + ${branch}}" th:text="${repoURL} + '/tree/' + ${branch}"></a>
-        <div id="report" class="text-left">
-            <a href="alex_resume.pdf" target="_blank">View PDF</a>
+        <div id="report" class="my-3">
+            <iframe src="http://localhost:8080/alex_resume.pdf" width="100%" height="600px">
+                If you can't view the content, please <a href="http://localhost:8080/alex_resume.pdf" target="_blank">click here</a> to download the PDF.
+            </iframe>
+
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
