--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -33,23 +33,8 @@
             border-radius: 10px;
         }
 
-        h1 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-size: 1em;
-            text-align: left;
-        }
-
-        .form-control {
-            padding-right: 80px;  /* To avoid overlap of button and input text */
-        }
-
         .btn {
             background-color: var(--very-dark-blue);  /* Dark blue color */
-            color: #EAECEE;  /* Light grey color */
         }
 
         .btn:hover {
@@ -58,36 +43,49 @@
 
     </style>
 </head>
-<body>
-    <div class="container text-center px-5">
-        <h1>Welcome to Fortify-to-Go</h1>
+
+<body class="text-light">
+
+    <div class="container text-center my-5 py-3 rounded shadow-lg">
+        <h2 class="mb-4">Welcome to Fortify-to-Go</h2>
 
         <div>
-            <form action="/selectBranch" method="post" id="repoForm">
-                <div class="input-group mb-3 py-3">
+            <form action="/selectBranch" method="post" id="repoForm" class="mb-3">
+                <div class="input-group">
                     <input type="text" class="form-control" placeholder="Enter GitHub link" name="repoURL" id="repoURL" required>
-                    <div class="input-group-append">
-                        <button class="btn btn-dark" type="submit">Submit</button>
-                    </div>
+                    <button class="btn btn-dark" type="submit">Submit</button>
                 </div>
             </form>
         </div>
 
         <div id="reportForm" style="display: none;">
-            <form action="/generateReport" method="post">
-                <div class="input-group mb-3 py-3">
+            <form action="/generateReport" method="post" class="mb-3">
+                <div class="input-group mb-3">
                     <select id="branchMenu" class="form-control" name="branch">
                         <option value="" disabled selected>Select a branch</option>
                     </select>
-                    <div class="input-group-append">
-                        <button class="btn btn-dark" type="submit" id="generateButton" disabled>Generate Report</button>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <input type="text" class="form-control" placeholder="Repo Name" name="repoName" id="repoName" required>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <input type="text" class="form-control" placeholder="Version Number" name="versionNumber" id="versionNumber" required>
                     </div>
                 </div>
+                <button class="btn btn-dark" type="submit" id="generateButton" disabled>Generate Report</button>
             </form>
         </div>
     </div>
 
     <script>
+        document.getElementById('repoForm').addEventListener('submit', function(event) {
+            event.preventDefault();  // Prevent default form submission
+
+            // Show the form with repo name and version fields
+            document.getElementById('reportForm').style.display = 'block';
+        });
+
         document.getElementById('branchMenu').addEventListener('change', function() {
             const generateButton = document.getElementById('generateButton');
             if (this.value === "") { // If "Select a branch" option is chosen
