--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -57,8 +57,10 @@
     <a href="/" class="btn btn-dark back-button" >Back</a>
 
     <div class="container text-center">
-        <h1 class="my-3">Your Fortify Report</h1>
+        <h1 class="my-3">Fortify Report</h1>
+        <p th:text="${repoName} + ' ' + ${repoVersion}"></p>
         <a th:href="@{${repoURL} + '/tree/' + ${branch}}" th:text="${repoURL} + '/tree/' + ${branch}"></a>
+
         <div id="report" class="my-3">
             <iframe src="http://localhost:8080/alex_resume.pdf" width="100%" height="600px">
                 If you can't view the content, please <a href="http://localhost:8080/alex_resume.pdf" target="_blank">click here</a> to download the PDF.
