--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -67,10 +67,10 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        <input type="text" class="form-control" placeholder="Repo Name" name="repoName" id="repoName" required>
+                        <input type="text" class="form-control" placeholder="Repo Name" name="repoName" id="repoName">
                     </div>
                     <div class="col-md-6 mb-3">
-                        <input type="text" class="form-control" placeholder="Version Number" name="versionNumber" id="versionNumber" required>
+                        <input type="text" class="form-control" placeholder="Version Number" name="versionNumber" id="versionNumber">
                     </div>
                 </div>
                 <button class="btn btn-dark" type="submit" id="generateButton" disabled>Generate Report</button>
