--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -40,12 +40,16 @@
 
     <div class="container text-center mt-5">
         <h1 class="my-3">Fortify Report</h1>
-        <p th:text="${repoName} + ' ' + ${repoVersion}"></p>
+        <p th:text="${repoName + ' ' + repoVersion}"></p>
         <a th:href="@{${repoURL} + '/tree/' + ${branch}}" th:text="${repoURL} + '/tree/' + ${branch}"></a>
 
         <div id="report" class="my-3">
-            <iframe src="http://localhost:8080/alex_resume.pdf" width="100%" height="600px" class="border-0">
-            </iframe>
+            <a th:href="@{'http://localhost:8080/reportFile/' + ${reportName}}" th:text="@{'http://localhost:8080/reportFile/' + ${reportName}}"></a>
+
+            <iframe th:src="@{'http://localhost:8080/reportFile/' + ${reportName}}" width="100%" height="600px" class="border-0"></iframe>
+
+<!--            <iframe th:src="@{'http://localhost:8080/' + ${reportName}}" width="100%" height="600px" class="border-0">-->
+<!--            </iframe>-->
         </div>
     </div>
 
